# facial-expression-classifier

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/facial_expression_classifier/: run.py
src/facial_expression_classifier/util/: settings.py  vizualizations.py
